--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,14 @@
 } */
 
 :root {
-    --text-font: 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+    --text-font: 'Inter var', -apple-system, 'Segoe UI', Roboto, Ubuntu, sans-serif;
     --header-font: 'Playfair Display', serif;
 }
 
 body {
     font-family: var(--text-font);
     line-height: 1.6;
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
     background-color: #f5f5f5;
@@ -20,7 +20,7 @@ body {
 
 .blog-container {
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 1fr;
     gap: 30px;
 }
 
@@ -39,67 +39,81 @@ body {
     padding: 13px;
     border: 1px solid #dfe3e4;
     border-radius: 5px;
+    color: #09a9c5;
+    text-align: center;
 }
 
 .user-info .name {
-    font-size: 17px;
+    font-size: 1.3rem;
     font-family: var(--header-font);
 }
 
-.sidebar {
+.footer-content {
     background: white;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
-h1 {
-    color: #2c3e50;
-    margin-bottom: 30px;
+.footer-links {
+    margin: 0;
+    font-size: 1rem;
 }
 
-h2 {
-    color: #34495e;
-    margin-top: 25px;
-}
-
-h1, h2, h3 {
-    font-family: var(--header-font);
-}
-
-ul {
-    list-style-type: none;
-    padding-left: 20px;
-}
-
-li {
-    margin-bottom: 8px;
-}
-
-a {
-    color: #2980b9;
+.footer-links a {
+    color: #09a9c5;
     text-decoration: none;
+    transition: color 0.3s ease;
 }
 
-a:hover {
+.footer-links a:hover {
+    color: #2c3e50;
     text-decoration: underline;
 }
 
-.reference-section {
-    margin-top: 50px;
-    border-top: 1px solid #dfe3e4;
-    padding-top: 20px;
+.hng-link {
+    display: block;
+    margin-top: 12px;
 }
 
-.hiring-links {
-    margin-top: 30px;
+h1, .name {
+    color: #2c3e50;
+}
+
+h2 {
+    margin-top: 25px;
+}
+
+h2, h3 {
+    color: #34495e;
+    font-family: var(--header-font);
 }
 
 @media (max-width: 768px) {
-    .blog-container {
-        grid-template-columns: 1fr;
-    }
     .user-info {
         flex-direction: column;
+    }
+
+    .footer-content {
+        flex-direction: column;
+        margin: 0 auto;
+    }
+
+    .footer-links {
+        display: flex;
+        flex-direction: column;
+        border-top: 1px solid #666;
+        border-top-width: 100%;
+        padding-top: 1rem;
+        align-items: center;
+        justify-content: center;
+        
+    }
+
+    .hide  {
+        display: none;
     }
 }
